Include Class Base for other class deliverys

--- a/example/DeliveryApiSDK.dproj
+++ b/example/DeliveryApiSDK.dproj
@@ -108,6 +108,7 @@
         <DCCReference Include="..\src\uiFood.pas"/>
         <DCCReference Include="..\src\uiFood.Authentication.pas"/>
         <DCCReference Include="..\src\uiFood.Credential.pas"/>
+        <DCCReference Include="..\src\Common\uClassBaseDelivery.pas"/>
         <None Include="..\.env.json"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -135,13 +136,6 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png" Configuration="Debug" Class="UWP_DelphiLogo44">
-                    <Platform Name="Win32">
-                        <RemoteDir>Assets\</RemoteDir>
-                        <RemoteName>Logo44x44.png</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
                 <DeployFile LocalName="$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png" Configuration="Debug" Class="UWP_DelphiLogo150">
                     <Platform Name="Win32">
                         <RemoteDir>Assets\</RemoteDir>
@@ -158,6 +152,13 @@
                 <DeployFile LocalName="..\.env.json" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png" Configuration="Debug" Class="UWP_DelphiLogo44">
+                    <Platform Name="Win32">
+                        <RemoteDir>Assets\</RemoteDir>
+                        <RemoteName>Logo44x44.png</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
