--- a/example/DeliveryApiSDK.dproj
+++ b/example/DeliveryApiSDK.dproj
@@ -105,12 +105,11 @@
             <Form>FormMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\src\uiFood.pas"/>
-        <DCCReference Include="..\src\uiFood.Authentication.pas"/>
-        <DCCReference Include="..\src\uiFood.Credential.pas"/>
         <DCCReference Include="..\src\Common\uClassBaseDelivery.pas"/>
-        <DCCReference Include="..\src\uiFood.Merchant.pas"/>
-        <None Include="..\.env.json"/>
+        <DCCReference Include="..\src\iFood\ParseClasses\uiFood.Authentication.pas"/>
+        <DCCReference Include="..\src\iFood\ParseClasses\uiFood.Credential.pas"/>
+        <DCCReference Include="..\src\iFood\ParseClasses\uiFood.Merchant.pas"/>
+        <DCCReference Include="..\src\iFood\uiFood.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -147,12 +146,6 @@
                 <DeployFile LocalName="DeliveryApiSDK.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DeliveryApiSDK.exe</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
-                <DeployFile LocalName="..\.env.json" Configuration="Debug" Class="ProjectFile">
-                    <Platform Name="Win32">
-                        <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
