--- a/example/DeliveryApiSDK.dproj
+++ b/example/DeliveryApiSDK.dproj
@@ -111,6 +111,11 @@
         <DCCReference Include="..\src\iFood\ParseClasses\uiFood.Credential.pas"/>
         <DCCReference Include="..\src\iFood\ParseClasses\uiFood.Merchant.pas"/>
         <DCCReference Include="..\src\iFood\uiFood.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Unavailability.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Availability.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Validation.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Reopenable.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Message.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
