--- a/example/DeliveryApiSDK.dproj
+++ b/example/DeliveryApiSDK.dproj
@@ -116,6 +116,7 @@
         <DCCReference Include="..\src\ifood\parseClasses\uiFood.Validation.pas"/>
         <DCCReference Include="..\src\ifood\parseClasses\uiFood.Reopenable.pas"/>
         <DCCReference Include="..\src\ifood\parseClasses\uiFood.Message.pas"/>
+        <DCCReference Include="..\src\ifood\parseClasses\uiFood.Polling.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
