--- a/example/.env copy.json
+++ b/example/.env copy.json
@@ -2,6 +2,7 @@
     "credenciais": {
         "ifood":{
             "homologacao":{
+                "baseURL":"",
                 "client_id": "", 
                 "client_secret": "", 
                 "grant_type": "",
@@ -9,6 +10,7 @@
                 "password": ""
             },
             "producao":{
+                "baseURL":"",
                 "client_id": "", 
                 "client_secret": "", 
                 "grant_type": "",
@@ -18,6 +20,7 @@
         },
         "deliverymuch":{
             "homologacao":{
+                "baseURL":"",
                 "client_id": "", 
                 "client_secret": "", 
                 "grant_type": "",
@@ -26,6 +29,7 @@
                 "scope": ""
             },
             "producao":{
+                "baseURL":"",
                 "client_id": "",                 
                 "client_secret": "", 
                 "grant_type": "",
@@ -36,10 +40,12 @@
         },
         "tonolucro":{
             "homologacao":{
+                "baseURL":"",
                 "token":""
 
             },
             "producao":{
+                "baseURL":"",
                 "token":""                
             }
         }
